--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Projeto "Tela de Login"</title>
    <link rel="stylesheet" href="estilos/style.css">
    <link rel="stylesheet" href="estilos/media-queries.css">
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
    <main>
@@ -16,8 +17,19 @@
          <div id="formulario">
             <h1>Login</h1>
             <p>Seja bem-vindo(a). Faça o login para acessar sua conta e configurar seu ambiente.</p>
-            <form action="login.php" method="post">
-
+            <form action="login.php" method="post" autocomplete="on">
+               <div class="campo">
+                  <span class="material-symbols-outlined">person</span>
+                  <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" maxlength="30" required>
+                  <label for="ilogin">Login</label>
+               </div>
+               <div class="campo">
+                  <span class="material-symbols-outlined">key</span>
+                  <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" sminlength="8" maxlength="15" required>
+                  <label for="isenha">Senha</label>
+               </div>
+               <input type="submit" value="Enviar">
+               <a class="botao" href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
             </form>
          </div>
       </section>
